--- a/myapp/Jenkinsfile
+++ b/myapp/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git 'https://github.com/eppjonathan/python-helloworld.git'
+               git branch: 'main', url: 'https://github.com/eppjonathan/python-helloworld.git'
             }
         }
         stage('Build') {
@@ -26,4 +26,3 @@ pipeline {
             }
         }
     }
-}
